# goplot

./: CHANGELOG.md  README.md  add_share_dir.ml  dune-project  goplot.install  goplot.opam
parser/: dune  lexer.mll  mathparse.ml  mathutils.ml  parser.mly  parseutil.ml
repo/: goplot_0.50-1_amd64.deb  goplot_0.51-1_amd64.deb  goplot_0.6-1_amd64.deb  goplot_0.60-1_amd64.deb
share/: dune  goplot.desktop
share/examples/: exam249.gpl  gamma.gpl  hexaedre.gpl  hyperboloid.gpl  moebius.gpl  pinched.gpl  rings.gpl  rotate.gpl  simple.gpl  sphere.gpl  whitney.gpl
share/images/: .directory  goplot.xpm  logo.oplot  make_png.sh
